k8s/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: youtube-analyzer
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: anlyzer.azurecr.io/backend:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: acr-secret 
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: youtube-analyzer
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
