k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-analyzer-ingress
  namespace: youtube-analyzer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myfrontend.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
    - host: mybackend.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
  tls:
    - hosts:
        - myfrontend.example.com
        - mybackend.example.com
      secretName: youtube-analyzer-tls
